New entries should be added at the top

==============================================================



==============================================================
2004-09-28 Released 0.63.0

2004-09-28 Added save to file object for agg - see
           examples/print_stdout.py

2004-09-24 Reorganized all py code to lib subdir

2004-09-24 Fixed axes resize image edge effects on interpolation -
           required upgrade to agg22 which fixed an agg bug related to
           this problem

2004-09-20 Added toolbar2 message display for backend_tkagg.  JTM


2004-09-17 Added coords formatter attributes.  These must be callable,
           and return a string for the x or y data. These will be used
           to format the x and y data for the coords box.  Default is
           the axis major formatter.  Eg

	     # format the coords message box
	     def price(x): return '$%1.2f'%x
	     ax.format_xdata = DateFormatter('%Y-%m-%d')
	     ax.format_ydata = price


2004-09-17 Total rewrite of dates handling to use python datetime with
           num2date, date2num and drange.  pytz for timezone handling,
           dateutils for spohisticated ticking.  date ranges from
           0001-9999 are supported.  rrules allow arbitrary date
           ticking.  examples/date_demo*.py converted to show new
           usage.  new example examples/date_demo_rrule.py shows how
           to use rrules in date plots.  The date locators are much
           more general and almost all of them have different
           constructors.  See matplotlib.dates for more info.

2004-09-15 Applied Fernando's backend __init__ patch to support easier
           backend maintenance.  Added his numutils to mlab.  JDH

2004-09-16 Re-designated all files in matplotlib/images as binary and
	   w/o keyword substitution using "cvs admin -kb *.svg ...".
	   See binary files in "info cvs" under Linux.  This was messing
	   up builds from CVS on windows since CVS was doing lf -> cr/lf 