@@ -1,6 +1,7 @@
 New entries should be added at the top
 
 ==============================================================
+2004-09-30 Add GTK+ 2.4 support for the message in the toolbar. SC
 
 
 
